    js/src/config/system-headers are kept in sync
    - update debian/patches/unity-globalmenu-build-support-patch
  * Fix browserGlue_distribution.js and browserGlue_smartBookmarks.js xpcshell
    test failures. Update DEFAULT_BOOKMARKS_ON_MENU with the correct number of
    default bookmarks
    - update debian/patches/ubuntu-bookmarks.patch

 -- Chris Coulson <chris.coulson@canonical.com>  Mon, 13 Jun 2011 12:23:06 +0100

firefox-trunk (6.0~a1~hg20110523r69965+nobinonly-0ubuntu1) oneiric; urgency=low

  * New upstream snapshot v6.0 A1 HG 20110523R69965

  * Update globalmenu-extension code to 1.5 prerelease based on r165

  * Refresh patches
    - update debian/patches/mozilla-kde.patch
    - update debian/patches/change-moz-app-name.patch
    - update debian/patches/firefox-kde.patch
    - update debian/patches/plugin-for-mimetype-pref.patch
    - drop debian/patches/default-uri-handler-check-use-gio.patch
  * Fix up the mess left by Ubuntuzilla rather than leaving our official
    package in a broken and inconsistent state, which ends up with users
    reporting bugs to Launchpad and giving us a bad reputation. If 
    /usr/bin/firefox has been diverted and there is no /usr/bin/firefox 
    provided on the system, just do the job of whatever package it was that
    broke the users install and remove the diversion for them. This should
    hopefully stop the frequently reported bugs we get from Ubuntuzilla users
    about /usr/bin/firefox being missing
    - update debian/firefox.postinst.in
    - Fixes LP: #512937, LP: #529136, LP: #552919, LP: #572733, LP: #574111,
      LP: #599978, LP: #600271, LP: #610522, LP: #610756, LP: #610907,
      LP: #612162, LP: #620400, LP: #623980, LP: #625014, LP: #630643,
      LP: #635166, LP: #638342, LP: #641838, LP: #658828, LP: #668809,
      LP: #672282, LP: #676239, LP: #707704, LP: #724090 
  * Don't allow users to report bugs with apport-bug when /usr/bin/firefox
    has been diverted