@@ -40,6 +40,8 @@ firefox-trunk (7.0~a1~hg20110529r70295+nobinonly-0ubuntu1) UNRELEASED; urgency=l
     test failures. Update DEFAULT_BOOKMARKS_ON_MENU with the correct number of
     default bookmarks
     - update debian/patches/ubuntu-bookmarks.patch
+  * Fix jsreftest failures by setting the correct timezone and locale
+    - update debian/testsuite.mk
 
  -- Chris Coulson <chris.coulson@canonical.com>  Mon, 13 Jun 2011 12:23:06 +0100
 
